k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: g-match
  labels:
    name: g-match
    environment: production
